--- a/style.css
+++ b/style.css
@@ -4,3 +4,63 @@ padding: 0;
 box-sizing: border-box;
 }
 
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.app {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header h1 {
+  margin: 50px 0px 30px 0px;
+  text-align: center;
+  font-size: 40px;
+}
+
+header p {
+  font-size: 20px;
+  text-align: center;
+}
+
+.pads { 
+  background: black;
+  width: 100%;
+  display: flex;
+}
+
+.pads > div{
+  height: 150px;
+  width: 100px;
+  flex: 1;
+
+}
+
+.pad1{
+  background: darkslategrey ;
+}
+
+.pad2{
+  background: darkblue;
+}
+
+.pad3{
+  background: darkgreen;
+}
+
+.pad4{
+  background: darkmagenta;
+
+}
+
+.pad5{
+  background: darkviolet;
+}
+
+.pad6{
+  background: gold;
+}
