--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header p {
 }
 
 .pad3{
-  background: darkgreen;
+  background: magenta;
 }
 
 .pad4{
@@ -62,5 +62,33 @@ header p {
 }
 
 .pad6{
-  background: gold;
+  background: lightskyblue;
 }
+
+.visual > div {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  bottom: 0%;
+  left: 20%;
+  transform: scale(1);
+  z-index: -1;
+}
+
+@keyframes jump {
+  0% {
+    bottom: 0%;
+    left: 20%;
+  }
+  50% {
+    bottom: 50%;
+    left: 50%;
+  }
+
+  100% {
+    bottom: 00%;
+    left: 80%;
+  }
+}
+
